# ic-pub-key

./: .gitignore  .nvmrc  .prettierrc  .test-vectors.md.swp  CONTRIBUTING.md  Cargo.toml  DEMO.md  HACKING.md  LICENSE  README.md  SECURITY.md  cli-test  dev-tools.json  eslint.config.js  out.secp256k1.123456.did  out.secp256k1.123456.json  package-lock.json  package.json  rust-toolchain.toml  test  test-vectors.md  tsconfig.eslint.json  tsconfig.json  vitest.config.js  vitest.config.ts
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/actions/needs_success/: action.yaml
.github/actions/prepare/: action.yaml
.github/workflows/: pr-checks.yml  publish.yml  rust.yml  test.yml  typescript.yml
lib/: README.md
lib/ic-ed25519/: .cargo-checksum.json  Cargo.toml
lib/ic-secp256k1/: .cargo-checksum.json  CHANGELOG.md  Cargo.toml
lib/k256/src/: lib.rs
scripts/: lint-rs  package-next  pre-publish  update-license  update-version.ts
src/: chain_code.ts  cli.ts  ecdsa.rs  ecdsa_public_key.rs  encoding.ts  index.ts  lib.rs  main.rs  main.ts  schnorr.rs  test_vector.rs
src/__tests__/: cli.test.ts  cli_test_vectors.schema.ts  encoding.test.ts
src/ecdsa/: index.ts  secp256k1.rs  secp256k1.ts  secp256k1_public_key.rs
src/ecdsa_public_key/: secp256k1_public_key.rs  secp256k1_public_key.ts  secp256k1_public_key_debug.ts
src/schnorr/: bip340secp256k1.rs  bip340secp256k1.ts  ed25519.rs  ed25519.ts  index.ts
src/signer/: btc.test.ts  btc.ts  eth.test.ts  eth.ts  index.ts
test/: README.md  cli.json  samples.json
(+30 files in other folders)
